// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders jméno sestupně 1`] = `
<div
  className="fixedDataTableCellLayout_wrap1 public_fixedDataTableCell_wrap1"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="fixedDataTableCellLayout_wrap2 public_fixedDataTableCell_wrap2"
  >
    <div
      className="fixedDataTableCellLayout_wrap3 public_fixedDataTableCell_wrap3"
    >
      <div
        className="public_fixedDataTableCell_cellContent"
      >
        <a
          onClick={[Function]}
        >
          jméno
           
          ↓
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the default 1`] = `
<div
  className="fixedDataTableCellLayout_wrap1 public_fixedDataTableCell_wrap1"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="fixedDataTableCellLayout_wrap2 public_fixedDataTableCell_wrap2"
  >
    <div
      className="fixedDataTableCellLayout_wrap3 public_fixedDataTableCell_wrap3"
    >
      <div
        className="public_fixedDataTableCell_cellContent"
      >
        <a
          onClick={[Function]}
        >
          příjmení
           
          
        </a>
      </div>
    </div>
  </div>
</div>
`;
